--- a/android-support-v4-preferencefragment-master/build.gradle
+++ b/android-support-v4-preferencefragment-master/build.gradle
@@ -1,31 +1,31 @@
 buildscript {
     repositories {
-        mavenCentral()
-        mavenLocal()
+        jcenter()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.10.+'
+        classpath 'com.android.tools.build:gradle:3.5.0'
     }
 }
 
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 apply plugin: 'maven'
 
 version = VERSION
 group = GROUP
 
 dependencies {
-    compile 'com.android.support:support-v4:19.0.+'
+    implementation 'com.android.support:support-v4:26.1.0'
 }
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion '20.0.0'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
-        minSdkVersion 7
-        targetSdkVersion 19
+        minSdkVersion 14
+        targetSdkVersion 26
     }
 
     sourceSets {
