--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,13 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         applicationId "ru.majo.bsutimetable"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 26
         versionCode 18
         versionName "2.2.0"
     }
@@ -31,23 +29,24 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.jenzz:materialpreference:1.3'
-    compile 'com.github.rahatarmanahmed:circularprogressview:2.3.2'
-    compile 'com.melnykov:floatingactionbutton:1.3.0'
-    compile 'me.drakeet.materialdialog:library:1.2.2'
-    compile 'io.reactivex:rxandroid:1.0.1'
-    compile 'io.reactivex:rxjava:1.0.14'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.google.dagger:dagger:2.0.1'
-    compile 'javax.annotation:jsr250-api:1.0'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
-    compile 'com.fasterxml.jackson.core:jackson-core:2.4.+'
-    apt "com.google.dagger:dagger-compiler:2.0.1"
-    provided 'org.glassfish:javax.annotation:10.0-b28'
-    compile project(':android-support-v4-preferencefragment-master')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.jenzz:materialpreference:1.3'
+    implementation 'com.github.rahatarmanahmed:circularprogressview:2.3.2'
+    implementation 'com.melnykov:floatingactionbutton:1.3.0'
+    implementation 'me.drakeet.materialdialog:library:1.2.2'
+    implementation 'io.reactivex:rxandroid:1.0.1'
+    implementation 'io.reactivex:rxjava:1.0.14'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.google.dagger:dagger:2.0.1'
+    implementation 'javax.annotation:jsr250-api:1.0'
+    implementation 'com.squareup.okhttp:okhttp:2.4.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.4.+'
+    annotationProcessor "com.google.dagger:dagger-compiler:2.0.1"
+    compileOnly 'org.glassfish:javax.annotation:10.0-b28'
+    implementation project(':android-support-v4-preferencefragment-master')
 }
